@@ -9,7 +9,7 @@ BEGIN {
 use strict;
 use warnings FATAL => 'all';
 use English qw(-no_match_vars);
-use Test::More tests => 38;
+use Test::More tests => 39;
 
 use MaatkitTest;
 
@@ -377,6 +377,17 @@ ok(
       "mk-query-digest/t/samples/slow048.txt",
    ),
    'Analysis for slow048 (issue 1030)',
+);
+
+# #############################################################################
+# Issue 347: A badly rewritten query  
+# #############################################################################
+ok(
+   no_diff(
+      sub { mk_query_digest::main(@args, '--report-format', 'query_report,profile',  $sample.'slow050.txt') },
+      "mk-query-digest/t/samples/slow050.txt",
+   ),
+   'Analysis for slow050 (issue 347)',
 );
 
 # #############################################################################
