@@ -1,0 +1,32 @@
+
+# Query 1: 0 QPS, 0x concurrency, ID 0x305E73C51188758F at byte 0 ________
+# This item is included in the report because it matches --limit.
+# Attribute    pct   total     min     max     avg     95%  stddev  median
+# ========= ====== ======= ======= ======= ======= ======= ======= =======
+# Count        100       1
+# Exec time    100     10s     10s     10s     10s     10s       0     10s
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Time range 2010-06-24 11:48:00 to 2010-06-24 11:48:00
+# bytes        100      86      86      86      86      86       0      86
+# Query_time distribution
+#   1us
+#  10us
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+  ################################################################
+# Tables
+#    SHOW TABLE STATUS LIKE 'mybbl_MBMessage'\G
+#    SHOW CREATE TABLE `mybbl_MBMessage`\G
+#    SHOW TABLE STATUS LIKE 'Group_'\G
+#    SHOW CREATE TABLE `Group_`\G
+UPDATE mybbl_MBMessage SET groupId = (select groupId from Group_ where name = 'Guest')\G
+
+# Profile
+# Rank Query ID           Response time     Calls R/Call   Item
+# ==== ================== ================= ===== ======== ===============
+#    1 0x305E73C51188758F    10.0000 100.0%     1  10.0000 UPDATE SELECT mybbl_MBMessage Group_
